// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Userpilot's trackEvent destination action: all fields 1`] = `
Object {
  "event_name": "@X4Tpj9VDVLvzA",
  "metadata": Object {
    "testType": "@X4Tpj9VDVLvzA",
  },
  "user_id": "@X4Tpj9VDVLvzA",
}
`;

exports[`Testing snapshot for Userpilot's trackEvent destination action: required fields 1`] = `
Object {
  "event_name": "@X4Tpj9VDVLvzA",
  "user_id": "@X4Tpj9VDVLvzA",
}
`;
